# game-stats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
game_stats/: betrayal-at-house-on-the-hill.sql  dungeons-and-dragons.sql  risk.sql
