[project]
name = "game-stats"
version = "0.0.0"
description = "Statistics for game events and outcomes."
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.group]
dev.optional = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
