[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "game-stats"
version = "0.0.0"
description = "Statistics for game events and outcomes."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
