# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "game-stats"
version = "0.0.0"
description = "Statistics for game events and outcomes."
authors = [{name = "billwallis"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
